--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   image:
     name: Image
-    uses: ./.github/workflows/build-python.yml@main
+    uses: ./.github/workflows/build-python.yml
     secrets: inherit
     with:
       dockerfile: ./docker/Dockerfile
