change dependency-management type

--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -6,12 +6,9 @@ on:
         required: true
         type: string
       dependency-management:
-        type: choice
         description: Do you use pip or poetry to install dependencies
-        options:
-          - pip
-          - poetry
         required: true
+        type: string
 
 jobs:
   build:
