Change dependency management

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     uses: ./.github/workflows/test-python.yml
     with:
       python-version: '3.10'
-      dependency-management: 'pip'
+      dependency-management: 'poetry'
 
 
   image:
