--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,3 +31,6 @@ readme = "README.md"
 [tool.poetry.group.dev.dependencies]
 pytest = "7.2.1"
 coverage= "7.0.1"
+
+[tool.poetry.dependencies]
+python = "^3.10"
