--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ jobs:
   build:
     name: Test
     uses: ./.github/workflows/test-python.yml
+    secrets: inherit
     with:
       python-version: '3.10'
       dependency-management: 'poetry'
