--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,10 @@ readme = "README.md"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "7.2.1"
-coverage= "7.0.1"
+coverage= "7.1.0"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+coverage = "^7.1.0"
+flake8 = "^6.0.0"
+pytest = "^7.2.1"
