--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -46,9 +46,9 @@ jobs:
           coverage run -m pytest
       - name: Coverage
         run: |
-          coverage xml ~/coverage.xml
+          coverage xml
       - name: Get Cover
         uses: orgoro/coverage@v3
         with:
-          coverageFile: ~/coverage.xml
+          coverageFile: ./coverage.xml
           token: ${{ secrets.DEPLOYER_GITHUB_TOKEN }}
