--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -45,9 +45,11 @@ jobs:
         run: |
           coverage run -m pytest
       - name: Coverage
+        if: github.event_name == 'pull_request'
         run: |
           coverage xml
       - name: Get Cover
+        if: github.event_name == 'pull_request'
         uses: orgoro/coverage@v3
         with:
           coverageFile: ./coverage.xml
