--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -45,12 +45,11 @@ jobs:
         run: |
           coverage run -m pytest
       - name: Coverage
-        if: github.event_name == 'pull_request'
         run: |
-          coverage xml
-      - name: Get Cover
-        if: github.event_name == 'pull_request'
-        uses: orgoro/coverage@v3
-        with:
-          coverageFile: ./coverage.xml
-          token: ${{ secrets.DEPLOYER_GITHUB_TOKEN }}
+          total = "coverage report | grep TOTAL | grep -o '[0-9][0-9]%'"]
+          total=${total::-1}
+          echo "Total test coverage = $total%"
+          if (( $(echo "$total ${{ inputs.coverage-threshold }}" | awk '{print ($1 < $2)}') )); then
+            echo "Quality gate failed. Coverage below minimum ${{ inputs.coverage-threshold }}%"
+            exit 1
+          fi
