--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -19,25 +19,28 @@ jobs:
   build:
     name: Test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python: ["3.8", "3.9", "3.10"]
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ inputs.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ inputs.python-version }}
+          python-version: ${{ matrix.python }}
       - name: Install dependencies (Pip)
         if: inputs.dependency-management == 'pip'
         run: |
           python -m pip install --upgrade pip
-          pip install coverage flake8 pytest
+          pip install coverage flake8 pytest tox
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Install dependencies (Poetry)
         if: inputs.dependency-management == 'poetry'
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
           poetry config virtualenvs.create false
-          poetry add coverage flake8 pytest
+          poetry add coverage flake8 pytest tox
           poetry install
       - name: Lint with flake8
         run: |
