--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -45,15 +45,18 @@ jobs:
       - name: Lint with flake8
         run: |
           flake8 .
-      - name: Test with pytest
-        run: |
-          coverage run -m pytest
-      - name: Coverage
-        run: |
-          total=`coverage report | grep TOTAL | grep -o '[0-9][0-9]%'`
-          total=${total::-1}
-          echo "Total test coverage = $total%"
-          if (( $(echo "$total ${{ inputs.coverage-threshold }}" | awk '{print ($1 < $2)}') )); then
-            echo "Quality gate failed. Coverage below minimum ${{ inputs.coverage-threshold }}%"
-            exit 1
-          fi
+#      - name: Test with pytest
+#        run: |
+#          coverage run -m pytest
+#      - name: Coverage
+#        run: |
+#          total=`coverage report | grep TOTAL | grep -o '[0-9][0-9]%'`
+#          total=${total::-1}
+#          echo "Total test coverage = $total%"
+#          if (( $(echo "$total ${{ inputs.coverage-threshold }}" | awk '{print ($1 < $2)}') )); then
+#            echo "Quality gate failed. Coverage below minimum ${{ inputs.coverage-threshold }}%"
+#            exit 1
+#          fi
+
+      - name: Test with tox
+        run: tox
