--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ isolated_build = true
 requires =
     tox>=4
 env_list = py{39,310,311}
+skipsdist = true
 
 [gh-actions]
 python =
@@ -16,4 +17,4 @@ allowlist_externals = poetry
 commands_pre =
     poetry install --no-root --sync
 commands =
-    poetry run pytest tests/ --import-mode importlib
+    poetry run python -m pytest tests/ --import-mode importlib
