Bring back coverage

--- a/tox.ini
+++ b/tox.ini
@@ -17,4 +17,4 @@ allowlist_externals = poetry
 commands_pre =
     poetry install --no-root --sync
 commands =
-    poetry run python -m pytest tests/ --import-mode importlib
+    poetry run coverage run -m pytest tests/ --import-mode importlib
