--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,3 +38,4 @@ coverage = "^7.1.0"
 flake8 = "^6.0.0"
 pytest = "^7.2.1"
 sphinx = "^6.1.3"
+py-clients = { git = "git@github.com:toggleglobal/py-clients.git", branch="main" }
