--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,12 +29,12 @@ authors = ["DW <dong@toggle.ai>"]
 readme = "README.md"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "7.2.1"
-coverage= "7.1.0"
+pytest = "*"
+coverage= "*"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-coverage = "^7.1.0"
-flake8 = "^6.0.0"
-pytest = "^7.2.1"
-sphinx = "^6.1.3"
+coverage = "*"
+flake8 = "*"
+pytest = "*"
+sphinx = "*"
